--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.1.1",
   "description": "lmTodo: An Ionic project",
   "dependencies": {
-    "gulp": "^3.5.6",
+    "gulp": "^3.9.0",
     "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",    
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "jasmine-core": "^2.4.1",
+    "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.15",
+    "karma-jasmine": "^0.3.6"
   },
   "devDependencies": {
     "bower": "^1.3.3",
