--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 node_modules/
 platforms/
 plugins/
+www/lib/angular-mocks
+www/lib/angular-sanitize
+www/lib/angular
+www/lib/angular-ui-router
+www/lib/angular-animate
