--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.4",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",    
+    "gulp-rename": "^1.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
-    "jasmine-core": "^2.4.1",
-    "jshint-stylish": "^2.0.1",
-    "karma": "^0.13.15",
-    "karma-jasmine": "^0.3.6"
+    "jshint-stylish": "^2.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
