--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "karma": "^0.13.22",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-coverage": "^0.5.3",
     "phantomjs-prebuilt": "^2.1.7",
     "shelljs": "^0.3.0"
   },
